# believers-eva-ai-service

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  app.py  guia_image_pricing.md  hello.py  main.py  pyproject.toml  response_output.json  sync_repos.py  sync_to_titovilal.sh  test_process_document.py
__docs__/: project_overview.md
cookbooks/: base_cookbook.py  execute_chunking_embeddings.py  execute_detect_number_in_text.py  execute_extract_verifiable_data.py  execute_generate_chunks.py  execute_generate_embeddings.py  execute_number_detection.py  execute_parse_pdf.py  execute_pdf_parser.py  execute_process_document.py  run_all_cookbooks.py
data/cookbooks_input/: sample.md  sample_chunks.txt
docs/: parsers.md  retrievers.md
examples/: parsers_example.py  retrievers_examples.py
notebooks/: 01_RAG_example.ipynb  notebook_setup.py
src/agents/: agent_factory.py  models.py  prompts.py  promtps.py  tools.py
src/api/: chat_parser.py  models.py  routes.py
src/dao/: companies.py  file_chunks.py  files.py  profiles.py
src/parsers/: __init__.py  chunkers.py  docling_parser.py  models.py  pdf_parser.py
src/process_document/: detect_number_in_text.py  extract_verifiable_data.py  generate_chunks.py  generate_embeddings.py  parse_pdf.py  process_document.py
src/rag/: db.py  detect_number_in_text.py  extract_verifiable_data.py  generate_chunks.py  generate_embeddings.py  parse_pdf.py  process_document.py
src/retrievers/: BM25sRetriever.py  ChromaDBRetriever.py  __init__.py  models.py
src/utils/: api_clients.py  constants.py  constants_old.py  logs.py
(+3 files in other folders)
