[project]
name = "believers-eva"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bm25s>=0.2.13",
    "chromadb>=1.0.10",
    "docling>=2.33.0",
    "pre-commit>=4.2.0",
    "pydantic-ai>=0.2.6",
    "pystemmer>=3.0.0",
    "ruff>=0.11.10",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
