[project]
name = "believers-eva-ai-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docling>=2.58.0",
    "fastapi>=0.120.1",
    "langchain-text-splitters>=0.3.0",
    "pydantic-ai>=1.7.0",
    "pypdf>=6.1.3",
    "text2num>=3.0.0",
    "tiktoken>=0.12.0",
    "torch>=2.0.0",
]

[tool.uv]
extra-index-url = ["https://download.pytorch.org/whl/cpu"]
